Starter code up and running with Konva.js CDN

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Spiro-Hex</title>
 
+    <script src="https://cdn.rawgit.com/konvajs/konva/2.3.0/konva.min.js"></script>
+
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
 
@@ -15,8 +17,9 @@
 
 </head>
 <body>
+        <div id="container"></div>
     
 </body>
 
-<script src="/public/assets/javascript/index.js"></script>
+<script src="public/assets/javascript/index.js"></script>
 </html>
