Added deployed link with readme

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
 </head>
 <body>
+
+        <div class="collection">
+                <a href="https://perfettiful.github.io/spiro-hexlet/" class="collection-item">Delpoyed on Github</a>
+
+        </div>
         <div id="container"></div>
     
 </body>
