--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Spiro-Hex</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="icon" href="https://static.thenounproject.com/png/30707-200.png" type="image/x-icon" />
 
-    <script src="https://cdn.rawgit.com/konvajs/konva/2.3.0/konva.min.js"></script>
+        <title>Spiro-Hex</title>
 
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+        <script src="https://cdn.rawgit.com/konvajs/konva/2.3.0/konva.min.js"></script>
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-            
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+                crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="public/assets/css/style.css">
 
 </head>
+
 <body>
 
         <div class="collection">
                 <a href="https://perfettiful.github.io/spiro-hexlet/" class="collection-item">Delpoyed on Github</a>
 
         </div>
+        <div class="slidecontainer">
+                <input type="range" min="1" max="100" value="50" class="slider" id="defaultSlider">
+                <p class="note">Current Speed: <span id="currentValue">0</span></p>
+        </div>
         <div id="container"></div>
-    
+
 </body>
 
 <script src="public/assets/javascript/index.js"></script>
+<script src="public/assets/javascript/slider.js"></script>
+
 </html>
